--- a/challenge.html
+++ b/challenge.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>初めてのHTML</title>
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="style.css" />
   </head>
+  <header>
+
+  </header>
 
   <body>
     DMM WEBCAMP1日目！
