--- a/challenge.html
+++ b/challenge.html
@@ -11,6 +11,12 @@
   </header>
 
   <body>
-    DMM WEBCAMP1日目！
+    <section id="mv">
+      <div class="container">
+        <h1 class="mv-title">Lorem Ipsum</h1>
+        <p class="mv-text">simply dummy text of the printing</p>
+      </div>
+    </section>
+
   </body>
 </html>
