--- a/challenge.html
+++ b/challenge.html
@@ -17,6 +17,11 @@
         <p class="mv-text">simply dummy text of the printing</p>
       </div>
     </section>
+    <section id="portfolio">
+      <h2 class="heading">
+        Portfolio
+      </h2>
+    </section>
 
   </body>
 </html>
